@@ -20,30 +20,30 @@ package io.crate.operation.user;
 
 import org.elasticsearch.action.ActionRequestValidationException;
 import org.elasticsearch.action.ValidateActions;
-import org.elasticsearch.action.support.master.MasterNodeRequest;
+import org.elasticsearch.action.support.master.AcknowledgedRequest;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 
 import java.io.IOException;
 
-public class DropUserRequest extends MasterNodeRequest<DropUserRequest> {
+public class DropUserRequest extends AcknowledgedRequest<DropUserRequest> {
 
     private String userName;
     private boolean ifExists;
 
-    public DropUserRequest() {
+    DropUserRequest() {
     }
 
-    public DropUserRequest(String userName, boolean ifExists) {
+    DropUserRequest(String userName, boolean ifExists) {
         this.userName = userName;
         this.ifExists = ifExists;
     }
 
-    public String userName() {
+    String userName() {
         return userName;
     }
 
-    public boolean ifExists() {
+    boolean ifExists() {
         return ifExists;
     }
 
