@@ -23,16 +23,16 @@ import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.master.TransportMasterNodeAction;
+import org.elasticsearch.cluster.AckedClusterStateUpdateTask;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.ClusterStateUpdateTask;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.MetaData;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.Priority;
 import org.elasticsearch.common.inject.internal.Nullable;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
@@ -61,7 +61,7 @@ public class TransportDropUserAction extends TransportMasterNodeAction<DropUserR
     @Override
     protected void masterOperation(DropUserRequest request, ClusterState state, ActionListener<WriteUserResponse> listener) throws Exception {
         clusterService.submitStateUpdateTask("drop_user [" + request.userName() + "]",
-            new ClusterStateUpdateTask() {
+            new AckedClusterStateUpdateTask<WriteUserResponse>(Priority.URGENT, request, listener) {
 
                 private long affectedRows;
 
@@ -79,18 +79,8 @@ public class TransportDropUserAction extends TransportMasterNodeAction<DropUserR
                 }
 
                 @Override
-                public void onFailure(String source, Exception e) {
-                    listener.onFailure(e);
-                }
-
-                @Override
-                public TimeValue timeout() {
-                    return request.masterNodeTimeout();
-                }
-
-                @Override
-                public void clusterStateProcessed(String source, ClusterState oldState, ClusterState newState) {
-                    listener.onResponse(new WriteUserResponse(true, affectedRows));
+                protected WriteUserResponse newResponse(boolean acknowledged) {
+                    return new WriteUserResponse(acknowledged, affectedRows);
                 }
             });
     }
